# poker-monte-carlo

./: .gitignore  CMakeLists.txt  Makefile  OPTIMIZATIONS.md  PLAN.md  README.md
apps/: equity_cli.cpp  perf_benchmark.cpp
include/poker/: card.hpp  deck.hpp  hand.hpp  range.hpp  simulator.hpp
src/: card.cpp  deck.cpp  hand.cpp  range.cpp  simulator.cpp
tests/: hand_tests.cpp  range_tests.cpp
